k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: reactapp
spec:
  ports:
   - port: 3000
     targetPort: 3000
     protocol: TCP
     name: http
  selector:
    app: reactapp
